added todo list

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>todo app</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <p>welcome</p>
+    <div class="container">
+        <h1 class="text-center title1">todo list app</p>
+            <div class="todo-container">
+                <form action="">
+                    <input type="text" name="" id="input-box" placeholder="add todo">
+                    <button type="submit" onclick="AddTodo()">add</button>
+                </form>
+                </div>
+                <div class="list-container">
+                    <!-- <h1 class="text-center">your todo list</h1> -->
+                    <ul id="todolist">
+                        <!-- <li class="checked">task 1</li>
+                        <li >task2</li>
+                        <li >task3</li> -->
+                        </ul>
+            </div>
+
+    </div>
+    <script src="./js/index.js"></script>
 </body>
 </html>
